# remote-brain-builder

./: .gitignore  README.md
.github/workflows/: android-apk.yml  ci.yml
android-client/: README.md  build.gradle.kts  settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/remotebrain/hid/: HidDeviceManager.kt  MainActivity.kt  TouchpadView.kt
android-client/app/src/main/res/layout/: activity_main.xml
android-client/app/src/main/res/values/: strings.xml  themes.xml
docs/: api-contract.md  architecture.md  how-to-run-bluetooth-hid.md  how-to-run.md  roadmap.md  threat-model.md
shared/protocol/: README.md  messages.json
windows-agent/: README.md  pyproject.toml
windows-agent/src/windows_agent/: __init__.py  __main__.py  config.py  input_control.py  pairing_ui.py  registry.py  security.py  server.py  web_ui_server.py
windows-agent/src/windows_agent/static/: app.js  index.html  styles.css
windows-agent/tests/: test_pairing.py  test_registry.py  test_smoke.py  test_trust_enforcement.py  test_web_ui_server.py
